# sample-licensing2

./: CMakeLists.txt  INetworkData.h  README.md  test.c
.github/workflows/: cla.yml  fossid_integration_stateless_diffscan_target_repo.yml
networkstats/plugin/: NetworkConnectionStatsLogger.cpp
